Added D100 project, but commented out until official release.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -96,7 +96,15 @@
 			<!-- This is shown on page -->
 			<div>
 				<h2 class="center"> Pillars of Dust and Young Stars from Ram Pressure Stripping of the Giant Spiral NGC 4921 in the Coma Cluster </h2>
-				<p> Descriptive text here </p>
+				<p> The largest spiral galaxy in the Coma Cluster is NGC 4921. Its truncated HI gas distribution (green contours) and HI
+					tail pointing to the SE reveal that it is presently experiencing ram pressure stripping from the NW (Kenney etal al
+					<a target="_blank" href="http://adsabs.harvard.edu/abs/2015AJ....150...59K">2015</a>). At the leading edge in the NW, the deep HST image shows a remarkable dust front, where dust and gas has been
+					pushed and piled up. Linear filamentary features extend outwards from this dust front, some of which have young star
+					clusters at their heads. These form from dense concentrations of gas and dust, which are too dense to be accelerated
+					by ram pressure, so partly decouple from the low density ISM as it is pushed by ram pressure. Yet the connections between
+					linear filaments and the downstream dust front, and the many C-shaped features along the dust front suggest that the
+					high and low density parts of the ISM are bound together by magnetic fields, as illustrated in the cartoon.
+				</p>
 			</div>
 			<!-- Grid container for multiple images -->
 			<div class="grid-container">
@@ -110,16 +118,19 @@
 					<img class="zoom" src="../images/ngc4921-color-hi-medium.jpg" onclick="openModal(1);currentImg(2, 1)" alt="NGC 4291 HI labeled">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/ngc4921-fig2.jpg" onclick="openModal(1);currentImg(3, 1)" alt="NGC 4291 dust front">
+					<img class="zoom" src="../images/n4921-hst-columbari-rotated+labels-small.jpg" onclick="openModal(1);currentImg(3, 1)" alt="NGC 4291 zoom sections">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/n4921-hst-columbari-rotated+labels-small.jpg" onclick="openModal(1);currentImg(4, 1)" alt="NGC 4291 zoom sections">
+					<img class="zoom" src="../images/ngc4921-fig2.jpg" onclick="openModal(1);currentImg(4, 1)" alt="NGC 4291 dust front">
 				</div>
 				<div class="grid-item-img">
 					<img class="zoom" src="../images/ngc4921-fig3.jpg" onclick="openModal(1);currentImg(5, 1)" alt="NGC 4291 dust front">
 				</div>
 				<div class="grid-item-img">
 					<img class="zoom" src="../images/ngc4921-fig4.jpg" onclick="openModal(1);currentImg(6, 1)" alt="NGC 4291 dust front">
+				</div>
+				<div class="grid-item-img">
+					<img class="zoom" src="../images/ngc4921-filament-decoupling-Bfields-cartoon.jpg" onclick="openModal(1);currentImg(7, 1)" alt="NGC 4291 decoupling magnetic fields cartoon">
 				</div>
 			</div>
 			<!-- Popup (modal) image on click (hidden) -->
@@ -140,12 +151,12 @@
 					<p> Hubble Space Telescope image of NGC 4921 with labeled HI regions. </p>
 				</div>
 				<div class="modal-content-1">
-					<img src="../images/ngc4921-fig2.jpg" alt="NGC 4291 dust front">
-					<p> Zoom in on the dust front showing the filaments. </p>
-				</div>
-				<div class="modal-content-1">
 					<img src="../images/n4921-hst-columbari-rotated+labels-small.jpg" alt="NGC 4291 zoom sections">
 					<p> Hubble Space Telescope image with indicated zoom-in regions. </p>
+				</div>
+				<div class="modal-content-1">
+					<img src="../images/ngc4921-fig2.jpg" alt="NGC 4291 dust front">
+					<p> Zoom in on the dust front showing the filaments. </p>
 				</div>
 				<div class="modal-content-1">
 					<img src="../images/ngc4921-fig3.jpg" alt="NGC 4291 dust front">
@@ -154,6 +165,10 @@
 				<div class="modal-content-1">
 					<img src="../images/ngc4921-fig4.jpg" alt="NGC 4291 dust front">
 					<p> Super zoom-ins on the galaxies dust filaments </p>
+				</div>
+				<div class="modal-content-1">
+					<img src="../images/ngc4921-filament-decoupling-Bfields-cartoon.jpg" alt="NGC 4291 decoupling magnetic fields cartoon">
+					<p> Cartoon of filament and magnetic field decoupling.  </p>
 				</div>
 			</div>
 		</section>
@@ -332,6 +347,64 @@
 				</div>
 			</div>
 		</section>
+
+		<!-- D100 - uncomment to implement -->
+		<!-- <section>
+			<div>
+				<h2 class="center"> A Remarkably Long and Thin Ram Pressure Stripped Tail </h2>
+				<p> D100 is a spiral galaxy in the Coma Cluster experiencing strong ram pressure stripping, as revealed by the very long
+					(40 kpc) and thin (2 kpc) H-alpha tail. (Cramer etal 2018). The HST image shows a clear spiral disk, and dark bands
+					from dust extinction show that the inner part of the stripped dust and gas tail shows straight, well-defined edges and
+					no signs of turbulence. There is some star formation in the tail, but most of the H-alpha emission arises from some
+					other mechanism. The tail is simpler than other tails, indicating that stripping has been simply outside-in, without
+					multiple radii being stripped at once. The tail does not broaden much over its length, implying that turbulence and
+					other factors that might act to broaden it are minimized. The 2 galaxies near D100 are an interesting part of the story.
+					the reddish-yellow galaxy to the left of D99 has no gas or ongoing star formation, and stopped star formation ~500 Myr
+					ago. Its star formation was likely quenched by ram pressure stripping. D99 has faint spiral structure, suggesting that
+					it is a galaxy similar to D99, but observed at a later evolutionary stage. The blue-ish dwarf galaxy below D100 also
+					has no star formation, and also likely suffered stripping.
+				</p>
+			</div> -->
+			<!-- Images for IC 3418 -->
+			<!-- <div class="grid-container">
+				<div class="grid-item-img">
+					<img class="zoom" src="../images/D100_180219_475+814-crop.png" onclick="openModal(5);currentImg(1, 5)" alt="D100 cropped">
+				</div>
+				<div class="grid-item-img">
+					<img class="zoom" src="../images/D100_180216-475+814-with-halpha.png" onclick="openModal(5);currentImg(2, 5)" alt="D100 with H-alpha">
+				</div>
+				<div class="grid-item-img">
+					<img class="zoom" src="../images/d100_dust_tail.png" onclick="openModal(5);currentImg(3, 5)" alt="D100 dust tail">
+				</div>
+				<div class="grid-item-img">
+					<img class="zoom" src="../images/d100+d99+dwarf-sub.jpg" onclick="openModal(5);currentImg(4, 5)" alt="D100 dwarf sub-focus">
+				</div>
+			</div> -->
+			<!-- Modal popup -->
+			<!-- <div id="modal-5"> -->
+				<!-- Close button and left / right nav -->
+				<!-- <span class="close" onclick="closeModal(5)">&times;</span>
+				<span class="prev" onclick="changeImg(-1, 5)">&#10094;</span>
+				<span class="next" onclick="changeImg(1, 5)">&#10095;</span> -->
+				<!-- Modal Images -->
+				<!-- <div class="modal-content-5">
+					<img src="../images/D100_180219_475+814-crop.png" alt="D100 cropped">
+					<p> description. </p>
+				</div>
+				<div class="modal-content-5">
+					<img src="../images/D100_180216-475+814-with-halpha.png" alt="D100 with H-alpha">
+					<p> description. </p>
+				</div>
+				<div class="modal-content-5">
+					<img src="../images/d100_dust_tail.png" alt="D100 dust tail">
+					<p> description. </p>
+				</div>
+				<div class="modal-content-5">
+					<img src="../images/d100+d99+dwarf-sub.jpg" alt="D100 dwarf sub-focus">
+					<p> description. </p>
+				</div>
+			</div>
+		</section> -->
 
 	</main>
 
