Edited JS to allow for multiple big picture H-alpha transitions.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -67,7 +67,7 @@
 			<!-- Main H-alpha image -->
 			<p> Click on the image to reveal H-alpha filaments. </p>
 			<div id="m86" class="center">
-				<img id="m86-top" src="../images/m86_2.jpg" onclick="toggleImage()" alt="M86 main">
+				<img class="top-img" src="../images/m86_2.jpg" onclick="toggleImage(0)" alt="M86 main">
 				<img src="../images/m86_rg2.jpg" alt="M86 H-alpha">
 			</div>
 			<!-- AdditionaliImages for M86 -->
@@ -368,16 +368,16 @@
 			<!-- Main H-alpha image -->
 			<p> Click on the image to reveal H-alpha filaments. </p>
 			<div id="d100" class="center">
-				<img id="top-img" src="../images/D100_wideCrop_180702.png" onclick="toggleImage()" alt="D100 main">
+				<img class="top-img" src="../images/D100_wideCrop_180702.png" onclick="toggleImage(1)" alt="D100 main">
 				<img src="../images/D100_wideCrop_Ha_180702.png" alt="D100 H-alpha">
 			</div>
 			<!-- Images for IC 3418 -->
 			<div class="grid-container">
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/d100_dust_tail.png" onclick="openModal(5);currentImg(3, 5)" alt="D100 dust tail">
+					<img class="zoom" src="../images/d100_dust_tail.png" onclick="openModal(5);currentImg(1, 5)" alt="D100 dust tail">
 				</div>
 				<div class="grid-item-img">
-					<img class="zoom" src="../images/d100+d99+dwarf-sub.jpg" onclick="openModal(5);currentImg(4, 5)" alt="D100 dwarf sub-focus">
+					<img class="zoom" src="../images/d100+d99+dwarf-sub.jpg" onclick="openModal(5);currentImg(2, 5)" alt="D100 dwarf sub-focus">
 				</div>
 			</div>
 			<!-- Modal popup -->
