Finished D100 h-alpha implementation and cleaned up some CSS max-width sizing errors.  Changed some ID's to classes and cleaned redundancies.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -66,7 +66,7 @@
 			</div>
 			<!-- Main H-alpha image -->
 			<p> Click on the image to reveal H-alpha filaments. </p>
-			<div id="m86" class="center">
+			<div class="h-alpha-pair center">
 				<img class="top-img" src="../images/m86_2.jpg" onclick="toggleImage(0)" alt="M86 main">
 				<img src="../images/m86_rg2.jpg" alt="M86 H-alpha">
 			</div>
@@ -367,7 +367,7 @@
 			</div>
 			<!-- Main H-alpha image -->
 			<p> Click on the image to reveal H-alpha filaments. </p>
-			<div id="d100" class="center">
+			<div class="h-alpha-pair center">
 				<img class="top-img" src="../images/D100_wideCrop_180702.png" onclick="toggleImage(1)" alt="D100 main">
 				<img src="../images/D100_wideCrop_Ha_180702.png" alt="D100 H-alpha">
 			</div>
