Tried to add subnav. Added nav hover.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -33,7 +33,7 @@
 	</header>
 
 	<!-- Navigation  -->
-	<nav id="nav-bar" class="borders-in">
+	<nav id="nav-bar">
 		<a href="index.html"> Home </a>
 		<a href="projects.html"> Research </a>
 		<a href="publications.html"> Publications </a>
@@ -43,7 +43,7 @@
 	<main role="main">
 
 		<!-- M86 -->
-		<section>
+		<section id="M86">
 			<!-- Project description -->
 			<div>
 				<h2 class="center"> Gas Filaments from the Collision between the Giant Virgo Elliptical M86 and the Spiral Galaxy NGC 4438. </h2>
@@ -92,7 +92,7 @@
 		</section>
 
 		<!-- NGC 4921 -->
-		<section>
+		<section id="NGC4921">
 			<!-- This is shown on page -->
 			<div>
 				<h2 class="center"> Pillars of Dust and Young Stars from Ram Pressure Stripping of the Giant Spiral NGC 4921 in the Coma Cluster </h2>
@@ -174,7 +174,7 @@
 		</section>
 
 		<!-- NGC 4522 -->
-		<section>
+		<section id="NGC4522">
 			<div>
 				<h2 class="center"> The Baby Jellyfish Galaxy NGC 4522 </h2>
 				<p> NGC 4522 was one the first spiral galaxies with convincing evidence for ongoing ram pressure stripping, as it shows the
@@ -237,7 +237,7 @@
 		</section>
 
 		<!-- NGC 4402 -->
-		<section>
+		<section id="NGC4402">
 			<div>
 				<h2 class="center"> Large Filaments of Decoupled Dense Gas in NGC 4402 </h2>
 				<p> The spiral galaxy NGC 4402 is a great example of active ram pressure stripping in the Virgo Cluster. Whereas NGC 4522
@@ -294,7 +294,7 @@
 		</section>
 
 		<!-- IC 3418 -->
-		<section>
+		<section id="IC3418">
 			<div>
 				<h2 class="center"> Transformation of a Dwarf Galaxy by Ram Pressure Stripping and the Fireball Tail of IC3418 </h2>
 				<p> IC3418 is a dwarf galaxy in the Virgo Cluster that is in the process of transforming from a late type dwarf to an early
@@ -349,7 +349,7 @@
 		</section>
 
 		<!-- D100 - uncomment to implement -->
-		<section>
+		<section id="D100">
 			<div>
 				<h2 class="center"> A Remarkably Long and Thin Ram Pressure Stripped Tail </h2>
 				<p> D100 is a spiral galaxy in the Coma Cluster experiencing strong ram pressure stripping, as revealed by the very long
