Messing with text hover.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -49,7 +49,7 @@
 				<h2 class="center"> Gas Filaments from the Collision between the Giant Virgo Elliptical M86 and the Spiral Galaxy NGC 4438. </h2>
 				<p> The giant elliptical galaxy M86 is the dominant galaxy in a subcluster now merging with the rest of the Virgo cluster.
 					Filaments of ionized gas (H-alpha emission) connect M86 and the nearby disturbed spiral galaxy NGC 4438, revealing that
-					they experienced a high-velocity (~1000 km/s) collision about 100 million years ago. (Kenney et al. al
+					they experienced a high-velocity (~1000 km/s) collision about 100 million years ago. (Kenney et al.
 					<a target="_blank" href="http://adsabs.harvard.edu/abs/2008ApJ...687L..69K">2008</a>). Their collision is not obvious in broadband images, which show starlight, but only when viewed in H-alpha.
 					The collision involved both a gravitational disturbance, changing stellar orbits, and an violent ISM-ISM collision,
 					producing strong shocks and heating. NGC 4438 would have experienced ram pressure stripping and lost much of its gas
@@ -97,7 +97,7 @@
 			<div>
 				<h2 class="center"> Pillars of Dust and Young Stars from Ram Pressure Stripping of the Giant Spiral NGC 4921 in the Coma Cluster </h2>
 				<p> The largest spiral galaxy in the Coma Cluster is NGC 4921. Its truncated HI gas distribution (green contours) and HI
-					tail pointing to the SE reveal that it is presently experiencing ram pressure stripping from the NW (Kenney etal al
+					tail pointing to the SE reveal that it is presently experiencing ram pressure stripping from the NW (Kenney et al.
 					<a target="_blank" href="http://adsabs.harvard.edu/abs/2015AJ....150...59K">2015</a>). At the leading edge in the NW, the deep HST image shows a remarkable dust front, where dust and gas has been
 					pushed and piled up. Linear filamentary features extend outwards from this dust front, some of which have young star
 					clusters at their heads. These form from dense concentrations of gas and dust, which are too dense to be accelerated
@@ -353,7 +353,7 @@
 			<div>
 				<h2 class="center"> A Remarkably Long and Thin Ram Pressure Stripped Tail </h2>
 				<p> D100 is a spiral galaxy in the Coma Cluster experiencing strong ram pressure stripping, as revealed by the very long
-					(40 kpc) and thin (2 kpc) H-alpha tail. (Cramer etal 2018). The HST image shows a clear spiral disk, and dark bands
+					(40 kpc) and thin (2 kpc) H-alpha tail. (Cramer et al. 2018). The HST image shows a clear spiral disk, and dark bands
 					from dust extinction show that the inner part of the stripped dust and gas tail shows straight, well-defined edges and
 					no signs of turbulence. There is some star formation in the tail, but most of the H-alpha emission arises from some
 					other mechanism. The tail is simpler than other tails, indicating that stripping has been simply outside-in, without
