Attempted clean-up of image grid

--- a/pages/index.html
+++ b/pages/index.html
@@ -58,11 +58,13 @@
                 <img src="../images/JK-profile.jpg" id="profile-img" alt="Jeffrey Kenney profile picture">
             </div>
             <div class="col-wide center-justify"> -->
-            <p class="center-justify"> As an observational astronomer who investigates the structure and evolution of galaxies, I am most interested
-                in factors that promote and stop star formation. A major focus of my work concerns the environmental impacts
-                on galaxy clusters, particularly molecular gas dynamics and ram pressure stripping. Much of my research has
-                been conducted on the nearby Virgo cluster, which can be studied with good resolution and sensitivity due
-                to its close proximity to our own Milky Way. </p>
+            <p class="center-justify"> I have been a Professor at Yale University since 1991, and served as Chair of the Astronomy Department from 2005-2011.
+                I earned a PhD in Astrophysics from the University of Massachusetts at Amherst in 1987. As an observational
+                astronomer who investigates the structure and evolution of galaxies, I am most interested in factors that
+                promote and stop star formation. A major focus of my work concerns the environmental impacts on galaxy clusters,
+                particularly molecular gas dynamics and ram pressure stripping. Much of my research has been conducted on
+                the nearby Virgo cluster, which can be studied with good resolution and sensitivity due to its close proximity
+                to our own Milky Way. </p>
             <!-- </div> -->
         </section>
 
