--- a/pages/projects.html
+++ b/pages/projects.html
@@ -70,11 +70,9 @@
 				<img class="top-img" src="../images/m86_2.jpg" onclick="toggleImage(0)" alt="M86 main">
 				<img src="../images/m86_rg2.jpg" alt="M86 H-alpha">
 			</div>
-			<!-- AdditionaliImages for M86 -->
-			<div class="grid-container">
-				<div class="grid-item-img">
-					<img class="zoom" src="../images/m86+ngc4438-3panel-large-fg2.jpeg" onclick="openModal(0);currentImg(0, 1)" alt="M86 3-pannel">
-				</div>
+			<!-- Additional Images for M86 -->
+			<div class="grid-item-img auto-width center">
+				<img class="zoom" src="../images/m86+ngc4438-3panel-large-fg2.jpeg" onclick="openModal(0);currentImg(0, 1)" alt="M86 3-pannel">
 			</div>
 			<!-- Modal popup -->
 			<div id="modal-0">
@@ -129,9 +127,9 @@
 				<div class="grid-item-img">
 					<img class="zoom" src="../images/ngc4921-fig4.jpg" onclick="openModal(1);currentImg(6, 1)" alt="NGC 4291 dust front">
 				</div>
-				<div class="grid-item-img">
-					<img class="zoom" src="../images/ngc4921-filament-decoupling-Bfields-cartoon.jpg" onclick="openModal(1);currentImg(7, 1)" alt="NGC 4291 decoupling magnetic fields cartoon">
-				</div>
+			</div>
+			<div class="grid-item-img auto-width center">
+				<img class="zoom" src="../images/ngc4921-filament-decoupling-Bfields-cartoon.jpg" onclick="openModal(1);currentImg(7, 1)" alt="NGC 4291 decoupling magnetic fields cartoon">
 			</div>
 			<!-- Popup (modal) image on click (hidden) -->
 			<div id="modal-1">
@@ -262,9 +260,9 @@
 				<div class="grid-item-img">
 					<img class="zoom" src="../images/ngc4402-hst-east-filament.jpg" onclick="openModal(3);currentImg(3, 3)" alt="NGC 4402 HST east filament">
 				</div>
-				<div class="grid-item-img">
-					<img class="zoom" src="../images/ngc4402-hst-3filaments.jpg" onclick="openModal(3);currentImg(4, 3)" alt="NGC HST 3 filaments">
-				</div>
+			</div>
+			<div class="grid-item-img auto-width center">
+				<img class="zoom" src="../images/ngc4402-hst-3filaments.jpg" onclick="openModal(3);currentImg(4, 3)" alt="NGC HST 3 filaments">
 			</div>
 			<!-- Modal popup -->
 			<div id="modal-3">
@@ -317,9 +315,9 @@
 				<div class="grid-item-img">
 					<img class="zoom" src="../images/ic3418-Halpha+NUV-fireballs.jpg" onclick="openModal(4);currentImg(3, 4)" alt="IC 3418 H-alpha and near-UV and 'fireballs'">
 				</div>
-				<div class="grid-item-img">
-					<img class="zoom" src="../images/ic3418-fireball-cartoon.gif" onclick="openModal(4);currentImg(4, 4)" alt="IC 3418 fireball cartoon">
-				</div>
+			</div>
+			<div class="grid-item-img auto-width center">
+				<img class="zoom" src="../images/ic3418-fireball-cartoon.gif" onclick="openModal(4);currentImg(4, 4)" alt="IC 3418 fireball cartoon">
 			</div>
 			<!-- Modal popup -->
 			<div id="modal-4">
