Finalizing styling for 500 media.

--- a/pages/index.html
+++ b/pages/index.html
@@ -23,9 +23,9 @@
 </head>
 
 
-<body>
+<body id="body">
 
-    <header>
+    <header role="banner">
 
         <!-- Header -->
         <div class="header-back">
