--- a/pages/projects.html
+++ b/pages/projects.html
@@ -57,19 +57,20 @@
 					clouds of HI in M86 (blue contour lines in middle panel) may have originated from gas stolen from NGC 4438 during the
 					collision.
 				</p>
-				<p>
-					In the H-alpha image, the red color is lower velocity H-alpha emission (-600 to +400 km/s), which covers the velocity range
-					of M86 and NGC 4438. The green color is higher velocity H-alpha emission (2000 to 3000 km/s), which covers the velocity
-					range of another nearby spiral NGC 4388, which is experiencing ram pressure stripping from its motion through the Virgo
-					Cluster.
-				</p>
 			</div>
 			<!-- Main H-alpha image -->
-			<p> Click on the image to reveal H-alpha filaments. </p>
 			<div class="h-alpha-pair center">
 				<img class="top-img" src="../images/m86_2.jpg" onclick="toggleImage(0)" alt="M86 main">
 				<img src="../images/m86_rg2.jpg" alt="M86 H-alpha">
 			</div>
+			<p class="center"> Click on the image to reveal H-alpha filaments. </p>
+			<!-- Paragraph below image -->
+			<p>
+				In the H-alpha image, the red color is lower velocity H-alpha emission (-600 to +400 km/s), which covers the velocity range
+				of M86 and NGC 4438. The green color is higher velocity H-alpha emission (2000 to 3000 km/s), which covers the velocity
+				range of another nearby spiral NGC 4388, which is experiencing ram pressure stripping from its motion through the Virgo
+				Cluster.
+			</p>
 			<!-- Additional Images for M86 -->
 			<div class="grid-item-img auto-width center">
 				<img class="zoom" src="../images/m86+ngc4438-3panel-large-fg2.jpeg" onclick="openModal(0);currentImg(0, 1)" alt="M86 3-pannel">
