--- a/pages/publications.html
+++ b/pages/publications.html
@@ -10,29 +10,30 @@
     <title>Publications of Jeffrey Kenney</title>
 
     <!-- Styles -->
-    <link rel="stylesheet" type="text/css" href="../css/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" media="screen and (max-device-height:500px)" href="../css/media-500.css">
-    <link rel="stylesheet" type="text/css" media="screen and (min-device-height:501px) and (max-width:800px)" href="../css/media-500-800.css">
+	<link rel="stylesheet" type="text/css" href="../css/normalize.css">
+	<link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
+	<link rel="stylesheet" type="text/css" media="screen and (max-device-width:500px)" href="../css/media-500.css">
+	<link rel="stylesheet" type="text/css" media="screen and (min-device-width:501px) and (max-width:800px)" href="../css/media-500-800.css">
 
     <!-- Scripts -->
+    <script type="text/javascript" src="../scripts/script.js"></script>
 
 </head>
 
 
-<body>
+<body id="body">
 
-    <header>
+    <header role="banner">
 
-        <div class="center">
+        <div class="head-title center">
             <h1> Jeffrey Kenney Publications </h1>
         </div>
 
     </header>
 
-     <!-- Navigation -->
-     <nav id="nav-bar">
+    <!-- Navigation -->
+    <nav id="nav-bar">
         <a href="index.html"> Home </a>
         <a href="projects.html"> Research </a>
         <a href="publications.html"> Publications </a>
@@ -43,8 +44,8 @@
 
         <!-- Publications -->
         <section class="center">
-            <p> A full list of publications is avaliable from the following sources </p>
-            <div class="grid-container">
+            <p> A full list of publications is avaliable from the following sources: </p>
+            <div class="sources-grid-container">
                 <div class="grid-item-img">
                     <a target="_blank" href="https://arxiv.org/search/advanced?advanced=&terms-0-operator=AND&terms-0-term=Kenney%2C+J+D+P&terms-0-field=author&terms-1-operator=OR&terms-1-term=Kenney%2C+J+D&terms-1-field=author&terms-2-operator=OR&terms-2-term=Kenney%2C+Jeff&terms-2-field=author&terms-3-operator=OR&terms-3-term=Kenney%2C+Jeffrey&terms-3-field=author&terms-4-operator=OR&terms-4-term=Kenney%2C+J&terms-4-field=author&terms-5-operator=OR&terms-5-term=Kenney%2C+Jeffrey+D&terms-5-field=title&classification-physics=y&classification-physics_archives=all&date-filter_by=all_dates&date-year=&date-from_date=&date-to_date=&date-date_type=submitted_date&abstracts=show&size=100&order=-announced_date_first">
                         <img height="200px" width="300px" src="../images/arxiv-logo.png">
@@ -59,11 +60,6 @@
                         class="text-link">NASA ADS</a>
                 </div>
             </div>
-        </section>
-
-        <!-- Selected publications -->
-        <section class="center">
-            <h2> Selected Publications </h2>
         </section>
 
     </main>
