--- a/pages/projects.html
+++ b/pages/projects.html
@@ -173,23 +173,15 @@
 				</p>
 			</div>
 			<!-- Images for NGC 4522 -->
-			<div class="grid-container">
-				<div class="grid-item-img">
-					<img src="../images/ngc4522-HI+Roptical.gif" onclick="openModal(2);currentImg(1, 2)" alt="NGC 4522 HI">
-				</div>
-				<div class="grid-item-img">
-					<img src="../images/n4522-kk99-ha+r-3panel.gif" onclick="openModal(2);currentImg(2, 2)" alt="NGC 4522 H-alpha + R 3-panel">
-				</div>
-				<div class="grid-item-img">
-					<img src="../images/n4522-hstimage-colombari-right-orientation.jpg" onclick="openModal(2);currentImg(3, 2)"
-					 alt="NGC 4522 HST">
-				</div>
-				<div class="grid-item-img">
-					<img src="../images/n4522-hst-color-nolabel-bigger.jpg" onclick="openModal(2);currentImg(4, 2)" alt="NGC 4522 HST color no labels">
-				</div>
-				<div class="grid-item-img">
-					<img src="../images/4522-structures-labelled.jpg" onclick="openModal(2);currentImg(5, 2)" alt="NGC 4522 structures labelled">
-				</div>
+			<div class="scroll-container">
+					<img class="scroll-item-image-2 show-img" src="../images/ngc4522-HI+Roptical.gif" onclick="openModal(2);currentImg(1, 2)" alt="NGC 4522 HI">
+					<img class="scroll-item-image-2" src="../images/n4522-kk99-ha+r-3panel.gif" onclick="openModal(2);currentImg(2, 2)" alt="NGC 4522 H-alpha + R 3-panel">
+					<img class="scroll-item-image-2" src="../images/n4522-hstimage-colombari-right-orientation.jpg" onclick="openModal(2);currentImg(3, 2)" alt="NGC 4522 HST">
+					<img class="scroll-item-image-2" src="../images/n4522-hst-color-nolabel-bigger.jpg" onclick="openModal(2);currentImg(4, 2)" alt="NGC 4522 HST color no labels">
+					<img class="scroll-item-image-2" src="../images/4522-structures-labelled.jpg" onclick="openModal(2);currentImg(5, 2)" alt="NGC 4522 structures labelled">
+					<!-- Buttons to move left / right in slideshow -->
+					<span class="display-left" onclick="changeSlide(-1, 2)">&#10094;</span>
+					<span class="display-right" onclick="changeSlide(+1, 2)">&#10095;</span>
 			</div>
 			<!-- Modal popup -->
 			<div id="modal-2">
@@ -238,19 +230,14 @@
 				</p>
 			</div>
 			<!-- Images for NGC 4402 -->
-			<div class="grid-container">
-				<div class="grid-item-img">
-					<img src="../images/n4402-hst-full-nolabel-color-bigger.jpg" onclick="openModal(3);currentImg(1, 3)" alt="NGC 4402 HST full color">
-				</div>
-				<div class="grid-item-img">
-					<img src="../images/n4402-hst-labelled-rps-features.jpg" onclick="openModal(3);currentImg(2, 3)" alt="NGC 4402 HST features labelled">
-				</div>
-				<div class="grid-item-img">
-					<img src="../images/ngc4402-hst-east-filament.jpg" onclick="openModal(3);currentImg(3, 3)" alt="NGC 4402 HST east filament">
-				</div>
-			</div>
-			<div class="grid-item-img auto-width center">
-				<img src="../images/ngc4402-hst-3filaments.jpg" onclick="openModal(3);currentImg(4, 3)" alt="NGC HST 3 filaments">
+			<div class="scroll-container">
+				<img class="scroll-item-image-3 show-img" src="../images/n4402-hst-full-nolabel-color-bigger.jpg" onclick="openModal(3);currentImg(1, 3)" alt="NGC 4402 HST full color">
+				<img class="scroll-item-image-3" src="../images/n4402-hst-labelled-rps-features.jpg" onclick="openModal(3);currentImg(2, 3)" alt="NGC 4402 HST features labelled">
+				<img class="scroll-item-image-3" src="../images/ngc4402-hst-east-filament.jpg" onclick="openModal(3);currentImg(3, 3)" alt="NGC 4402 HST east filament">
+				<img class="scroll-item-image-3" src="../images/ngc4402-hst-3filaments.jpg" onclick="openModal(3);currentImg(4, 3)" alt="NGC HST 3 filaments">
+				<!-- Buttons to move left / right in slideshow -->
+				<span class="display-left" onclick="changeSlide(-1, 3)">&#10094;</span>
+				<span class="display-right" onclick="changeSlide(+1, 3)">&#10095;</span>
 			</div>
 			<!-- Modal popup -->
 			<div id="modal-3">
@@ -293,19 +280,14 @@
 				</p>
 			</div>
 			<!-- Images for IC 3418 -->
-			<div class="grid-container">
-				<div class="grid-item-img">
-					<img src="../images/IC_3418_UV+opt.jpg" onclick="openModal(4);currentImg(1, 4)" alt="IC 3418 UV and opical">
-				</div>
-				<div class="grid-item-img">
-					<img src="../images/ic3418-in-virgo.PNG" onclick="openModal(4);currentImg(2, 4)" alt="IC 3418 in Virgo Cluster">
-				</div>
-				<div class="grid-item-img">
-					<img src="../images/ic3418-Halpha+NUV-fireballs.jpg" onclick="openModal(4);currentImg(3, 4)" alt="IC 3418 H-alpha and near-UV and 'fireballs'">
-				</div>
-			</div>
-			<div class="grid-item-img auto-width center">
-				<img src="../images/ic3418-fireball-cartoon.gif" onclick="openModal(4);currentImg(4, 4)" alt="IC 3418 fireball cartoon">
+			<div class="scroll-container">
+				<img class="scroll-item-image-4 show-img" src="../images/IC_3418_UV+opt.jpg" onclick="openModal(4);currentImg(1, 4)" alt="IC 3418 UV and opical">
+				<img class="scroll-item-image-4" src="../images/ic3418-in-virgo.PNG" onclick="openModal(4);currentImg(2, 4)" alt="IC 3418 in Virgo Cluster">
+				<img class="scroll-item-image-4" src="../images/ic3418-Halpha+NUV-fireballs.jpg" onclick="openModal(4);currentImg(3, 4)" alt="IC 3418 H-alpha and near-UV and 'fireballs'">
+				<img class="scroll-item-image-4" src="../images/ic3418-fireball-cartoon.gif" onclick="openModal(4);currentImg(4, 4)" alt="IC 3418 fireball cartoon">
+				<!-- Buttons to move left / right in slideshow -->
+				<span class="display-left" onclick="changeSlide(-1, 4)">&#10094;</span>
+				<span class="display-right" onclick="changeSlide(+1, 4)">&#10095;</span>
 			</div>
 			<!-- Modal popup -->
 			<div id="modal-4">
@@ -358,13 +340,12 @@
 				<img src="../images/D100_wideCrop_Ha_180702.png" alt="D100 H-alpha">
 			</div>
 			<!-- Images for IC 3418 -->
-			<div class="grid-container">
-				<div class="grid-item-img">
-					<img src="../images/d100_dust_tail.png" onclick="openModal(5);currentImg(1, 5)" alt="D100 dust tail">
-				</div>
-				<div class="grid-item-img">
-					<img src="../images/d100+d99+dwarf-sub.jpg" onclick="openModal(5);currentImg(2, 5)" alt="D100 dwarf sub-focus">
-				</div>
+			<div class="scroll-container">
+				<img class="scroll-item-image-5 show-img" src="../images/d100_dust_tail.png" onclick="openModal(5);currentImg(1, 5)" alt="D100 dust tail">
+				<img class="scroll-item-image-5" src="../images/d100+d99+dwarf-sub.jpg" onclick="openModal(5);currentImg(2, 5)" alt="D100 dwarf sub-focus">
+				<!-- Buttons to move left / right in slideshow -->
+				<span class="display-left" onclick="changeSlide(-1, 5)">&#10094;</span>
+				<span class="display-right" onclick="changeSlide(+1, 5)">&#10095;</span>
 			</div>
 			<!-- Modal popup -->
 			<div id="modal-5">
