--- a/pages/projects.html
+++ b/pages/projects.html
@@ -72,9 +72,10 @@
 				Cluster.
 			</p>
 			<!-- Additional Images for M86 -->
-			<div class="grid-item-img auto-width center">
+			<div class="grid-item-img third-width center">
 				<img src="../images/m86+ngc4438-3panel-large-fg2.jpeg" onclick="openModal(0);currentImg(0, 1)" alt="M86 3-pannel">
 			</div>
+			<p class="center comment">Clik to enlarge image.</p>
 			<!-- Modal popup -->
 			<div id="modal-0">
 				<!-- Close button -->
@@ -107,18 +108,21 @@
 			</div>
 			<!-- Container for scroll images -->
 			<div class="scroll-container">
-				<!-- Onclick opens the modal box (larger images) on click - arguement corresponds to the project id  -->
-				<!-- Current image arguements - ID of the current image, modal of the project to open -->
-				<img class="scroll-item-image-1 show-img" src="../images/ngc4921-color-hi-medium.jpg" onclick="openModal(1);currentImg(2, 1)" alt="NGC 4291 HI labeled">
-				<img class="scroll-item-image-1" src="../images/n4921-hst-columbari-rotated+labels-small.jpg" onclick="openModal(1);currentImg(3, 1)" alt="NGC 4291 zoom sections">
-				<img class="scroll-item-image-1" src="../images/ngc4921-fig2.jpg" onclick="openModal(1);currentImg(4, 1)" alt="NGC 4291 dust front">
-				<img class="scroll-item-image-1" src="../images/ngc4921-fig3.jpg" onclick="openModal(1);currentImg(5, 1)" alt="NGC 4291 dust front">
-				<img class="scroll-item-image-1" src="../images/ngc4921-fig4.jpg" onclick="openModal(1);currentImg(6, 1)" alt="NGC 4291 dust front">
-				<img class="scroll-item-image-1" src="../images/ngc4921-filament-decoupling-Bfields-cartoon.jpg" onclick="openModal(1);currentImg(7, 1)" alt="NGC 4291 decoupling magnetic fields cartoon">
+				<div class="grid-item-img third-width center">
+					<!-- Onclick opens the modal box (larger images) on click - arguement corresponds to the project id  -->
+					<!-- Current image arguements - ID of the current image, modal of the project to open -->
+					<img class="scroll-item-image-1 show-img" src="../images/ngc4921-color-hi-medium.jpg" onclick="openModal(1);currentImg(2, 1)" alt="NGC 4291 HI labeled">
+					<img class="scroll-item-image-1" src="../images/n4921-hst-columbari-rotated+labels-small.jpg" onclick="openModal(1);currentImg(3, 1)" alt="NGC 4291 zoom sections">
+					<img class="scroll-item-image-1" src="../images/ngc4921-fig2.jpg" onclick="openModal(1);currentImg(4, 1)" alt="NGC 4291 dust front">
+					<img class="scroll-item-image-1" src="../images/ngc4921-fig3.jpg" onclick="openModal(1);currentImg(5, 1)" alt="NGC 4291 dust front">
+					<img class="scroll-item-image-1" src="../images/ngc4921-fig4.jpg" onclick="openModal(1);currentImg(6, 1)" alt="NGC 4291 dust front">
+					<img class="scroll-item-image-1" src="../images/ngc4921-filament-decoupling-Bfields-cartoon.jpg" onclick="openModal(1);currentImg(7, 1)" alt="NGC 4291 decoupling magnetic fields cartoon">
+				</div>
 				<!-- Buttons to move left / right in slideshow -->
 				<span class="display-left" onclick="changeSlide(-1, 1)">&#10094;</span>
 				<span class="display-right" onclick="changeSlide(+1, 1)">&#10095;</span>
 			</div>
+			<p class="center comment">Clik to enlarge image.</p>
 			<!-- Popup (modal) image on click (hidden) -->
 			<div id="modal-1">
 				<!-- Close button -->
@@ -174,15 +178,18 @@
 			</div>
 			<!-- Images for NGC 4522 -->
 			<div class="scroll-container">
+				<div class="grid-item-img third-width center">
 					<img class="scroll-item-image-2 show-img" src="../images/ngc4522-HI+Roptical.gif" onclick="openModal(2);currentImg(1, 2)" alt="NGC 4522 HI">
 					<img class="scroll-item-image-2" src="../images/n4522-kk99-ha+r-3panel.gif" onclick="openModal(2);currentImg(2, 2)" alt="NGC 4522 H-alpha + R 3-panel">
 					<img class="scroll-item-image-2" src="../images/n4522-hstimage-colombari-right-orientation.jpg" onclick="openModal(2);currentImg(3, 2)" alt="NGC 4522 HST">
 					<img class="scroll-item-image-2" src="../images/n4522-hst-color-nolabel-bigger.jpg" onclick="openModal(2);currentImg(4, 2)" alt="NGC 4522 HST color no labels">
 					<img class="scroll-item-image-2" src="../images/4522-structures-labelled.jpg" onclick="openModal(2);currentImg(5, 2)" alt="NGC 4522 structures labelled">
-					<!-- Buttons to move left / right in slideshow -->
-					<span class="display-left" onclick="changeSlide(-1, 2)">&#10094;</span>
-					<span class="display-right" onclick="changeSlide(+1, 2)">&#10095;</span>
+				</div>
+				<!-- Buttons to move left / right in slideshow -->
+				<span class="display-left" onclick="changeSlide(-1, 2)">&#10094;</span>
+				<span class="display-right" onclick="changeSlide(+1, 2)">&#10095;</span>
 			</div>
+			<p class="center comment">Clik to enlarge image.</p>
 			<!-- Modal popup -->
 			<div id="modal-2">
 				<!-- Close button -->
@@ -231,14 +238,17 @@
 			</div>
 			<!-- Images for NGC 4402 -->
 			<div class="scroll-container">
-				<img class="scroll-item-image-3 show-img" src="../images/n4402-hst-full-nolabel-color-bigger.jpg" onclick="openModal(3);currentImg(1, 3)" alt="NGC 4402 HST full color">
-				<img class="scroll-item-image-3" src="../images/n4402-hst-labelled-rps-features.jpg" onclick="openModal(3);currentImg(2, 3)" alt="NGC 4402 HST features labelled">
-				<img class="scroll-item-image-3" src="../images/ngc4402-hst-east-filament.jpg" onclick="openModal(3);currentImg(3, 3)" alt="NGC 4402 HST east filament">
-				<img class="scroll-item-image-3" src="../images/ngc4402-hst-3filaments.jpg" onclick="openModal(3);currentImg(4, 3)" alt="NGC HST 3 filaments">
+				<div class="grid-item-img third-width center">
+					<img class="scroll-item-image-3 show-img" src="../images/n4402-hst-full-nolabel-color-bigger.jpg" onclick="openModal(3);currentImg(1, 3)" alt="NGC 4402 HST full color">
+					<img class="scroll-item-image-3" src="../images/n4402-hst-labelled-rps-features.jpg" onclick="openModal(3);currentImg(2, 3)" alt="NGC 4402 HST features labelled">
+					<img class="scroll-item-image-3" src="../images/ngc4402-hst-east-filament.jpg" onclick="openModal(3);currentImg(3, 3)" alt="NGC 4402 HST east filament">
+					<img class="scroll-item-image-3" src="../images/ngc4402-hst-3filaments.jpg" onclick="openModal(3);currentImg(4, 3)" alt="NGC HST 3 filaments">
 				<!-- Buttons to move left / right in slideshow -->
+				</div>
 				<span class="display-left" onclick="changeSlide(-1, 3)">&#10094;</span>
 				<span class="display-right" onclick="changeSlide(+1, 3)">&#10095;</span>
 			</div>
+			<p class="center comment">Clik to enlarge image.</p>
 			<!-- Modal popup -->
 			<div id="modal-3">
 				<!-- Close button -->
@@ -281,14 +291,17 @@
 			</div>
 			<!-- Images for IC 3418 -->
 			<div class="scroll-container">
-				<img class="scroll-item-image-4 show-img" src="../images/IC_3418_UV+opt.jpg" onclick="openModal(4);currentImg(1, 4)" alt="IC 3418 UV and opical">
-				<img class="scroll-item-image-4" src="../images/ic3418-in-virgo.PNG" onclick="openModal(4);currentImg(2, 4)" alt="IC 3418 in Virgo Cluster">
-				<img class="scroll-item-image-4" src="../images/ic3418-Halpha+NUV-fireballs.jpg" onclick="openModal(4);currentImg(3, 4)" alt="IC 3418 H-alpha and near-UV and 'fireballs'">
-				<img class="scroll-item-image-4" src="../images/ic3418-fireball-cartoon.gif" onclick="openModal(4);currentImg(4, 4)" alt="IC 3418 fireball cartoon">
+				<div class="grid-item-img third-width center">
+					<img class="scroll-item-image-4 show-img" src="../images/IC_3418_UV+opt.jpg" onclick="openModal(4);currentImg(1, 4)" alt="IC 3418 UV and opical">
+					<img class="scroll-item-image-4" src="../images/ic3418-in-virgo.PNG" onclick="openModal(4);currentImg(2, 4)" alt="IC 3418 in Virgo Cluster">
+					<img class="scroll-item-image-4" src="../images/ic3418-Halpha+NUV-fireballs.jpg" onclick="openModal(4);currentImg(3, 4)" alt="IC 3418 H-alpha and near-UV and 'fireballs'">
+					<img class="scroll-item-image-4" src="../images/ic3418-fireball-cartoon.gif" onclick="openModal(4);currentImg(4, 4)" alt="IC 3418 fireball cartoon">
+				</div>
 				<!-- Buttons to move left / right in slideshow -->
 				<span class="display-left" onclick="changeSlide(-1, 4)">&#10094;</span>
 				<span class="display-right" onclick="changeSlide(+1, 4)">&#10095;</span>
 			</div>
+			<p class="center comment">Clik to enlarge image.</p>
 			<!-- Modal popup -->
 			<div id="modal-4">
 				<!-- Close button -->
@@ -334,19 +347,22 @@
 				</p>
 			</div>
 			<!-- Main H-alpha image -->
-			<p> Click on the image to reveal H-alpha filaments. </p>
 			<div class="h-alpha-pair center">
 				<img class="top-img" src="../images/D100_wideCrop_180702.png" onclick="toggleImage(1)" alt="D100 main">
 				<img src="../images/D100_wideCrop_Ha_180702.png" alt="D100 H-alpha">
 			</div>
+			<p> Click on the image to reveal H-alpha filaments. </p>
 			<!-- Images for IC 3418 -->
 			<div class="scroll-container">
-				<img class="scroll-item-image-5 show-img" src="../images/d100_dust_tail.png" onclick="openModal(5);currentImg(1, 5)" alt="D100 dust tail">
-				<img class="scroll-item-image-5" src="../images/d100+d99+dwarf-sub.jpg" onclick="openModal(5);currentImg(2, 5)" alt="D100 dwarf sub-focus">
+				<div class="grid-item-img third-width center">
+					<img class="scroll-item-image-5 show-img" src="../images/d100_dust_tail.png" onclick="openModal(5);currentImg(1, 5)" alt="D100 dust tail">
+					<img class="scroll-item-image-5" src="../images/d100+d99+dwarf-sub.jpg" onclick="openModal(5);currentImg(2, 5)" alt="D100 dwarf sub-focus">
+				</div>
 				<!-- Buttons to move left / right in slideshow -->
 				<span class="display-left" onclick="changeSlide(-1, 5)">&#10094;</span>
 				<span class="display-right" onclick="changeSlide(+1, 5)">&#10095;</span>
 			</div>
+			<p class="center comment">Clik to enlarge image.</p>
 			<!-- Modal popup -->
 			<div id="modal-5">
 				<!-- Close button and left / right nav -->
